2005-10-13 Borut Razem <borut.razem@siol.net>
	* makefile.mingw, doc/makefile.mingw: building gpsim documentation on WIN32

2005-10-13 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/cmd_load.cc, cli/cmd_macro.cc, cli/input.cc,
	cli/socket.cc: command assertions were not getting processed immediately.
	* regression/tmr0_16bit/tmr0_16bit.asm: Started interrupt test.
	
2005-10-12 Borut Razem <borut.razem@siol.net>
	* regression/make.regression, regression/run_regression.sh,
	  regression/*/Makefile: added possibility to define gpism path

2005-10-12 Scott Dattalo <scott@dattalo.com>
	* src/16bit-registers.cc, regression/tmr0_16bit/tmr0_16bit.asm:
	The high byte of TMR0 was not getting updated during TMR0L reads.

2005-10-11 Scott Dattalo <scott@dattalo.com>
	* src/pic-instructions.cc, src/pic-instructions.h: Added methods
	to the instruction class that provide acces to the source defining
	an instruction (this is going to be used with tracing and
	disassembly soon).

2005-10-11 Borut Razem <borut.razem@siol.net>
	* regression/usart_test/usart_test.asm, regression/logic_test/logic_test.asm,
	  modules/makefile.mingw, gui/gui_breadbord.cc, plat/win32/gpsim.nsi:
	  gpsim_modules.dll renamed to libgpsim_modules.dll

2005-10-09 Scott Dattalo <scott@dattalo.com>
	* regression/tmr0_16bit/tmr0_16bit.asm: More tmr0 regressions
	testing
	* src/cod.cc, src/breakpoints.h, src/breakpoints.cc: Added the
	CommandAssertion class. These are assertions that are associated
	with instructions in such a way that when an instruction executes,
	the command assertion will issue a gpsim command line command.
	* gpsim/main.cc: removed a debug printf.
	* cli/input.cc, cmd_macro.cc, cli/ui_gpsim.cc: command assertions
	were getting inserted into the end of the command line input
	stream as opposed to interjected immediately.

2005-10-10 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/cmd_load.cc, cli/cmd_symbol.cc,
	src/symbol.cc, src/symbol.h: Simplified the way user defined